Fill Java/Performance